2010-05-17  Sebastien Pouliot  <sebastien@ximian.com>

	* GeneratorPosition.cs: Fix error CS0843 with newer compilers -
	just like CSC would not compile it previously

2010-04-13  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Added in missing default values.

2010-03-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Selector: Update to SL4 beta API.

2010-02-26  Mario Carrion  <mcarrion@novell.com>

	* Popup.cs: Overriding OnCreateAutomationPeer.

	r: toshok

2010-02-18  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: ClearContainerForItemOverride should not clear
	  the SelectedItem anymore.

2010-02-18  Alan McGovern  <amcgovern@novell.com>

	* Selection.cs: Add support for the case where the user
	  directly modifies ListBox.SelectedItems.

2010-02-17  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Nuke ItemsControl.GetContainerItem along with
	  ListBoxItem.Item. This is all handled by
	  ItemContainerGenerator now. Move all the calls to
	  GetContainerItem to the corresponding ItemContainerGenerator
	  calls. 

2010-02-17  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Port to the new ItemContainerGenerator API when
	  setting IsSelected on ListBoxItems.

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Popup.cs:
	* Selector.cs:
	* LayoutInformation.cs: Fix compiler warnings.

2010-01-28  Alan McGovern  <amcgovern@novell.com>

	* Selection.cs: If null is passed into the Select method, that
	  means we should deselect everything. Otherwise if an item is
	  passed in which is *not* in the ItemsControl.Items list, we
	  should deselect it if it's already selected. This happens
	  when the user removes an item from the Items list which is
	  selected.

	* Selector.cs: When we replace a selected item, we need to
	  deselect it rather than clearing all selected items.

2010-01-27  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs:
	* Selection.cs: Land initial support for multi-selection in